examples/test/testpolicy5186.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5186
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key15: value24
      key16: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value14
          key15: value32
          key31: value40
      podSelector:
        matchLabels:
          key9: value9
          key27: value32
          key21: value16
